--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class='enter'>YUK DIBUKA</div>
+  <div class='enter'>YUK DIBUK/Please Open</div>
   <div class='door'>
     <div class='left'></div>
     <div class='right'></div>
@@ -29,6 +29,18 @@
         <br>
         <span class="text-wrapperz text-center">
           <span class="letterz">HARI RAYA IDUL FITRI 1444H</span>
+        </span>
+      </h1>
+    </div>
+    <div class="fireworks kotakutama">
+    <div class="kotakteks">
+      <h1 class="ml10">
+        <span class="text-wrapper text-center">
+          <span class="letter">HAPPY</span>
+        </span>
+        <br>
+        <span class="text-wrapperz text-center">
+          <span class="letterz">EID MUBARAK 1444H</span>
         </span>
       </h1>
     </div>
