--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class='enter'>YUK DIBUK/Please Open</div>
+  <div class='enter'>YUK DIBUKA/Please Open</div>
   <div class='door'>
     <div class='left'></div>
     <div class='right'></div>
@@ -23,6 +23,9 @@
   <div class="fireworks kotakutama">
     <div class="kotakteks">
       <h1 class="ml10">
+        <span class="text-wrapper text-center">
+          <span class="letter">MUSTOFA KAMAL</span>
+        </span>
         <span class="text-wrapper text-center">
           <span class="letter">SELAMAT MERAYAKAN</span>
         </span>
