--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <span class="text-wrapper text-center">
           <span class="letter">MUSTOFA KAMAL</span>
         </span>
+        <br>
         <span class="text-wrapper text-center">
           <span class="letter">SELAMAT MERAYAKAN</span>
         </span>
@@ -33,20 +34,14 @@
         <span class="text-wrapperz text-center">
           <span class="letterz">HARI RAYA IDUL FITRI 1444H</span>
         </span>
-      </h1>
-    </div>
-    <div class="fireworks kotakutama">
-    <div class="kotakteks">
-      <h1 class="ml10">
-        <span class="text-wrapper text-center">
-          <span class="letter">HAPPY</span>
+         <span class="text-wrapper text-center">
+          <span class="letter">HAPPY EID MUBARAK 1444H</span>
         </span>
         <br>
-        <span class="text-wrapperz text-center">
-          <span class="letterz">EID MUBARAK 1444H</span>
-        </span>
+        
       </h1>
     </div>
+   
 
     <img src="bedug.webp" class="bedug">
   </div>
