--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class='enter'>YUK DIBUKA/Please Open</div>
+  <div class='enter'>Please Open</div>
   <div class='door'>
     <div class='left'></div>
     <div class='right'></div>
