--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=7">
-  <title>Selamat Hari Raya Idul Fitri 1444H</title>
+  <title>Happy Eid Mubarak 1445H</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="google" content="notranslate">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
@@ -32,11 +32,11 @@
         </span>
         <br>
         <span class="text-wrapperz text-center">
-          <span class="letterz">HARI RAYA IDUL FITRI 1444H</span>
+          <span class="letterz">HARI RAYA IDUL FITRI 1445H</span>
         </span>
         <br>
          <span class="text-wrapper text-center">
-          <span class="letter">HAPPY EID MUBARAK 1444H</span>
+          <span class="letter">HAPPY EID MUBARAK 1445H</span>
         </span>
         <br>
         
